--- a/server/partials/examples/dropdown.html
+++ b/server/partials/examples/dropdown.html
@@ -1,7 +1,34 @@
+<div class="ui floating dropdown labeled search icon button">
+  <i class="world icon"></i>
+  <span class="text">Select Language</span>
+  <div class="menu">
+    <div class="item">Arabic</div>
+    <div class="item">Chinese</div>
+    <div class="item">Danish</div>
+    <div class="item">Dutch</div>
+    <div class="item">English</div>
+    <div class="item">French</div>
+    <div class="item">German</div>
+    <div class="item">Greek</div>
+    <div class="item">Hungarian</div>
+    <div class="item">Italian</div>
+    <div class="item">Japanese</div>
+    <div class="item">Korean</div>
+    <div class="item">Lithuanian</div>
+    <div class="item">Persian</div>
+    <div class="item">Polish</div>
+    <div class="item">Portuguese</div>
+    <div class="item">Russian</div>
+    <div class="item">Spanish</div>
+    <div class="item">Swedish</div>
+    <div class="item">Turkish</div>
+    <div class="item">Vietnamese</div>
+  </div>
+</div>
 <div class="ui search selection dropdown">
   <input type="hidden" name="country">
   <i class="dropdown icon"></i>
-  <div class="default text">Select country</div>
+  <div class="default text">Select Country</div>
   <div class="menu">
     <div data-value="ad" class="item"><i class="ad flag"></i>Andorra</div>
     <div data-value="ae" class="item"><i class="ae flag"></i>U.A.E</div>
@@ -248,7 +275,8 @@
   </div>
 </div>
 
-<div class="ui divider"></div>
+<div class="ui hidden divider"></div>
+
 <div class="ui searchable floating dropdown labeled icon button">
   <i class="filter icon"></i>
   <span class="text">Filter Posts</span>
@@ -274,11 +302,160 @@
     </div>
   </div>
 </div>
+
+<div class="ui hidden divider"></div>
+
+Show me posts trending
+<div class="ui inline dropdown">
+    <div class="text">today</div>
+    <i class="dropdown icon"></i>
+    <div class="menu">
+      <div class="item" data-text="today">Today</div>
+      <div class="item" data-text="this week">This Week</div>
+      <div class="item" data-text="this month">This Month</div>
+    </div>
+</div>
+
+<div class="ui hidden divider"></div>
+
+<div class="ui left pointing dropdown icon button">
+  <i class="settings icon"></i>
+  <div class="menu">
+    <div class="ui transparent left icon input">
+      <i class="search icon"></i>
+      <input name="search" placeholder="Search issues..." type="text">
+    </div>
+    <div class="divider"></div>
+    <div class="header">
+      <i class="tags icon"></i>
+      Filter by tag
+    </div>
+    <div class="item">
+      <div class="ui red empty circular label"></div>
+      Important
+    </div>
+    <div class="item">
+      <div class="ui blue empty circular label"></div>
+      Announcement
+    </div>
+    <div class="item">
+      <div class="ui black empty circular label"></div>
+      Discussion
+    </div>
+  </div>
+</div>
+
+<div class="ui hidden divider"></div>
+
+<div class="ui menu">
+  <a class="item">
+    Home
+  </a>
+  <div class="ui pointing dropdown link item">
+    <i class="dropdown icon"></i>
+    <span class="text">Shopping</span>
+    <div class="menu">
+      <div class="header">Categories</div>
+      <div class="item">
+        <i class="dropdown icon"></i>
+        <span class="text">Clothing</span>
+        <div class="menu">
+          <div class="header">Mens</div>
+          <div class="item">Shirts</div>
+          <div class="item">Pants</div>
+          <div class="item">Jeans</div>
+          <div class="item">Shoes</div>
+          <div class="divider"></div>
+          <div class="header">Womens</div>
+          <div class="item">Dresses</div>
+          <div class="item">Shoes</div>
+          <div class="item">Bags</div>
+        </div>
+      </div>
+      <div class="item">Home Goods</div>
+      <div class="item">Bedroom</div>
+      <div class="divider"></div>
+      <div class="header">Order</div>
+      <div class="item">Status</div>
+      <div class="item">Cancellations</div>
+    </div>
+  </div>
+  <a class="item">
+    Forums
+  </a>
+  <a class="item">
+    Contact Us
+  </a>
+</div>
+
+<div class="ui hidden divider"></div>
+
+<div class="ui vertical menu">
+  <div class="menu">
+    <a class="item">
+      Home
+    </a>
+    <div class="ui left pointing dropdown link item">
+      <i class="dropdown icon"></i>
+      Messages
+      <div class="menu">
+        <div class="item">Inbox</div>
+        <div class="item">Starred</div>
+        <div class="item">Sent Mail</div>
+        <div class="item">Drafts (143)</div>
+        <div class="divider"></div>
+        <div class="item">Spam (1009)</div>
+        <div class="item">Trash</div>
+      </div>
+    </div>
+    <a class="item">
+      Browse
+    </a>
+    <a class="item">
+      Help
+    </a>
+  </div>
+</div>
+
+<div class="ui hidden divider"></div>
+
+<div class="ui icon buttons">
+  <div class="ui top left pointing dropdown button">
+    <i class="user icon"></i>
+    <div class="menu">
+      <div class="item"><i class="edit icon"></i>Edit User</div>
+      <div class="item"><i class="delete icon"></i>Remove User</div>
+      <div class="item"><i class="hide icon"></i>Make Invisible</div>
+    </div>
+  </div>
+  <div class="ui top left pointing dropdown button">
+    <i class="users icon"></i>
+    <div class="menu">
+      <div class="item"><i class="edit icon"></i>Edit Group</div>
+      <div class="item"><i class="delete icon"></i>Remove Group</div>
+      <div class="item"><i class="hide icon"></i>Hide from Group</div>
+    </div>
+  </div>
+  <div class="ui top right pointing dropdown button">
+    <i class="settings icon"></i>
+    <div class="menu">
+      <div class="item"><i class="edit icon"></i> Edit</div>
+      <div class="item"><i class="delete icon"></i> Remove</div>
+      <div class="item"><i class="hide icon"></i> Hide</div>
+    </div>
+  </div>
+</div>
+
 <script type="text/javascript">
 $(document)
   .ready(function(){
     $('.demo .ui.dropdown')
       .dropdown()
+    ;
+    $('.demo .ui.menu .dropdown')
+      .dropdown({
+        on: 'hover'
+      })
     ;
   })
 ;
