--- a/server/partials/examples/label.html
+++ b/server/partials/examples/label.html
@@ -11,12 +11,32 @@
   <i class="mail icon"></i> Icon
 </a>
 <a class="ui tag label">Tag</a>
+<div class="ui empty circular label"></div>
+<div class="ui black empty circular label"></div>
+<div class="ui teal empty circular label"></div>
+
+
+<form class="ui fluid form">
+  <div class="two fields">
+    <div class="field">
+      <input placeholder="First name" type="text">
+      <div class="ui pointing label">
+        Pointing Label
+      </div>
+    </div>
+    <div class="field" placeholder="Last Name">
+      <div class="ui pointing below label">
+        Pointing below label
+      </div>
+      <input type="text">
+    </div>
+  </div>
+</form>
 
 <div class="ui hidden divider"></div>
 <div class="ui two item menu">
   <a class="item">
     Item
-    <div class="floating ui label">2</div>
   </a>
   <a class="item">
     Item
