--- a/server/partials/examples/list.html
+++ b/server/partials/examples/list.html
@@ -1,4 +1,4 @@
-<div class="ui two column stackable grid">
+<div class="ui two column relaxed stackable grid">
   <div class="column">
     <div class="ui list">
       <div class="item">
@@ -164,7 +164,7 @@
   </div>
 </div>
 
-<div class="ui divider"></div>
+<div class="ui hidden divider"></div>
 
 <div class="ui horizontal list">
   <div class="item">
