--- a/server/partials/examples/message.html
+++ b/server/partials/examples/message.html
@@ -11,6 +11,16 @@
     </ul>
   </div>
 </div>
+<div class="ui message">
+  <div class="header">
+    List Message
+  </div>
+  <ul class="list">
+    <li>List item 1</li>
+    <li>List item 2</li>
+    <li>List item 3</li>
+  </ul>
+</div>
 <div class="ui info message">
   <div class="header">Info Message</div>
   <p>Example description</p>
