--- a/server/partials/examples/reveal.html
+++ b/server/partials/examples/reveal.html
@@ -4,7 +4,7 @@
     <img src="/images/wireframe/white-image.png" class="ui small bordered image">
   </div>
   <div class="hidden content">
-    <img src="/images/wireframe/square-image.png" class="ui small bordered image">
+    <img src="/images/avatar/large/ade.jpg" class="ui small bordered image">
   </div>
 </div>
 <div class="ui slide up instant reveal">
@@ -12,7 +12,7 @@
     <img src="/images/wireframe/white-image.png" class="ui small bordered image">
   </div>
   <div class="hidden content">
-    <img src="/images/wireframe/square-image.png" class="ui small bordered image">
+    <img src="/images/avatar/large/chris.jpg" class="ui small bordered image">
   </div>
 </div>
 <div class="ui slide left instant reveal">
@@ -20,7 +20,7 @@
     <img src="/images/wireframe/white-image.png" class="ui small bordered image">
   </div>
   <div class="hidden content">
-    <img src="/images/wireframe/square-image.png" class="ui small bordered image">
+    <img src="/images/avatar/large/christian.jpg" class="ui small bordered image">
   </div>
 </div>
 <div class="ui slide right instant reveal">
@@ -28,7 +28,7 @@
     <img src="/images/wireframe/white-image.png" class="ui small bordered image">
   </div>
   <div class="hidden content">
-    <img src="/images/wireframe/square-image.png" class="ui small bordered image">
+    <img src="/images/avatar/large/daniel.jpg" class="ui small bordered image">
   </div>
 </div>
 
@@ -37,7 +37,7 @@
     <img src="/images/wireframe/white-image.png" class="ui small bordered image">
   </div>
   <div class="hidden content">
-    <img src="/images/wireframe/square-image.png" class="ui small bordered image">
+    <img src="/images/avatar/large/elliot.jpg" class="ui small bordered image">
   </div>
 </div>
 <div class="ui move up masked instant reveal">
@@ -45,7 +45,7 @@
     <img src="/images/wireframe/white-image.png" class="ui small bordered image">
   </div>
   <div class="hidden content">
-    <img src="/images/wireframe/square-image.png" class="ui small bordered image">
+    <img src="/images/avatar/large/helen.jpg" class="ui small bordered image">
   </div>
 </div>
 <div class="ui move left masked instant reveal">
@@ -53,7 +53,7 @@
     <img src="/images/wireframe/white-image.png" class="ui small bordered image">
   </div>
   <div class="hidden content">
-    <img src="/images/wireframe/square-image.png" class="ui small bordered image">
+    <img src="/images/avatar/large/jenny.jpg" class="ui small bordered image">
   </div>
 </div>
 <div class="ui move right masked instant reveal">
@@ -61,7 +61,7 @@
     <img src="/images/wireframe/white-image.png" class="ui small bordered image">
   </div>
   <div class="hidden content">
-    <img src="/images/wireframe/square-image.png" class="ui small bordered image">
+    <img src="/images/avatar/large/joe.jpg" class="ui small bordered image">
   </div>
 </div>
 
@@ -70,7 +70,7 @@
     <img src="/images/wireframe/white-image.png" class="ui small bordered circular image">
   </div>
   <div class="hidden content">
-    <img src="/images/wireframe/square-image.png" class="ui small bordered circular image">
+    <img src="/images/avatar/large/justen.jpg" class="ui small bordered circular image">
   </div>
 </div>
 <div class="ui rotate reveal">
@@ -78,6 +78,6 @@
     <img src="/images/wireframe/white-image.png" class="ui small bordered circular image">
   </div>
   <div class="hidden content">
-    <img src="/images/wireframe/square-image.png" class="ui small bordered circular image">
+    <img src="/images/avatar/large/laura.jpg" class="ui small bordered circular image">
   </div>
 </div>
