Adding more examples

--- a/server/partials/examples/accordion.html
+++ b/server/partials/examples/accordion.html
@@ -100,7 +100,7 @@
 <script type="text/javascript">
 $(document)
   .ready(function(){
-    $('.demo .ui.accordion')
+    $('.demo .example .ui.accordion')
       .accordion()
     ;
   })
