--- a/server/partials/examples/menu.html
+++ b/server/partials/examples/menu.html
@@ -91,7 +91,7 @@
 <script type="text/javascript">
 $(document)
   .ready(function(){
-    $('.demo.menu a.item')
+    $('.demo .example .menu a.item')
       .on('click', function() {
         if(!$(this).hasClass('dropdown')) {
           $(this)
