--- a/server/partials/examples/loader.html
+++ b/server/partials/examples/loader.html
@@ -1,32 +1,195 @@
-<div class="ui mini inline active loader"></div>
-<div class="ui small inline active loader"></div>
-<div class="ui inline active loader"></div>
-<div class="ui large inline active loader"></div>
-
-<div class="ui inline mini active text loader">
-  Loading
+<div class="ui four column grid">
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active dimmer">
+        <div class="ui mini loader"></div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active dimmer">
+        <div class="ui small loader"></div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active dimmer">
+        <div class="ui loader"></div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active dimmer">
+        <div class="ui large loader"></div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
 </div>
-<div class="ui inline small active text loader">
-  Loading
+<div class="ui four column grid">
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active inverted dimmer">
+        <div class="ui mini text loader">
+          Loading
+        </div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active inverted dimmer">
+        <div class="ui small text loader">
+          Loading
+        </div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active inverted dimmer">
+        <div class="ui text loader">
+          Loading
+        </div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active inverted dimmer">
+        <div class="ui large text loader">
+          Loading
+        </div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
 </div>
-<div class="ui inline active text loader">
-  Loading
+<div class="ui four column grid">
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active dimmer">
+        <div class="ui mini loader"></div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active dimmer">
+        <div class="ui small loader"></div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active dimmer">
+        <div class="ui loader"></div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active dimmer">
+        <div class="ui large loader"></div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
 </div>
-<div class="ui inline large active text loader">
-  Loading
-</div>
-
-<div class="ui hidden clearing divider"></div>
-
-<div class="ui indeterminate inline text active loader">
-  Indeterminate
+<div class="ui four column grid">
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active inverted dimmer">
+        <div class="ui mini text loader">
+          Loading
+        </div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active inverted dimmer">
+        <div class="ui small text loader">
+          Loading
+        </div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active inverted dimmer">
+        <div class="ui text loader">
+          Loading
+        </div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
+  <div class="column">
+    <div class="ui segment">
+      <div class="ui active inverted dimmer">
+        <div class="ui large text loader">
+          Loading
+        </div>
+      </div>
+      <br><br>
+      <br><br>
+      <br><br>
+    </div>
+  </div>
 </div>
 
 <div class="ui hidden clearing divider"></div>
 
 <div class="ui segment">
   <div class="ui active inverted dimmer">
-    <div class="ui loader"></div>
+    <div class="ui indeterminate text active loader">
+      Preparing...
+    </div>
   </div>
   <br><br>
   <br><br>
@@ -35,7 +198,7 @@
 
 <div class="ui segment">
   <div class="ui active dimmer">
-    <div class="ui loader"></div>
+    <div class="ui indeterminate active loader"></div>
   </div>
   <br><br>
   <br><br>
