--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -1770,3 +1770,8 @@ body.progress.animated .ui.progress .bar {
     flex: 1;
   }
 }
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  #example > .pusher > .full.height {
+    flex: none;
+  }
+}
