--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -227,11 +227,12 @@ a:hover {
 #example .header.segment .download.popup .grid {
   max-width: 0px;
 }
-#example .header.segment .download.popup .grid .column {
+#example .header.segment .download.popup .choice.grid .column {
   width: 200px;
 }
-#example .header.segment .download.popup .link.grid .column {
-  width: 400px;
+#example .header.segment .download.popup .framework.grid .column,
+#example .header.segment .download.popup .standalone.grid .column {
+  width: 350px;
 }
 #example .header.segment .download.popup .check.icon {
   margin-left: -1em;
