--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -1725,6 +1725,9 @@ body.progress.animated .ui.progress .bar {
 }
 
 @media only screen and (max-width : 640px) {
+  #example .header.segment .download.button {
+    display: none;
+  }
   #example .language.dropdown .menu {
     overflow-x: hidden;
     overflow-y: auto;
