Add dimmer example, docs on new popup setting

--- a/server/partials/examples/loader.html
+++ b/server/partials/examples/loader.html
@@ -1,4 +1,4 @@
-<div class="ui four column grid">
+<div class="ui four column stackable doubling grid">
   <div class="column">
     <div class="ui segment">
       <div class="ui active dimmer">
@@ -40,7 +40,7 @@
     </div>
   </div>
 </div>
-<div class="ui four column grid">
+<div class="ui four column stackable doubling grid">
   <div class="column">
     <div class="ui segment">
       <div class="ui active inverted dimmer">
@@ -90,7 +90,7 @@
     </div>
   </div>
 </div>
-<div class="ui four column grid">
+<div class="ui four column stackable doubling grid">
   <div class="column">
     <div class="ui segment">
       <div class="ui active dimmer">
@@ -132,7 +132,7 @@
     </div>
   </div>
 </div>
-<div class="ui four column grid">
+<div class="ui four column stackable doubling grid">
   <div class="column">
     <div class="ui segment">
       <div class="ui active inverted dimmer">
