--- a/server/partials/examples/progress.html
+++ b/server/partials/examples/progress.html
@@ -30,13 +30,13 @@
 <script type="text/javascript">
 $(document)
   .ready(function() {
-    $('.attached.progress')
+    $('.attached.progress.demo')
       .progress({
         label   : false,
         value   : Math.floor(Math.random() * 5) + 1
       })
     ;
-    $('.basic.progress')
+    $('.basic.progress.demo')
       .progress({
         label   : false,
         value   : Math.floor(Math.random() * 5) + 1,
@@ -46,7 +46,7 @@ $(document)
         }
       })
     ;
-    $('.indicating.progress')
+    $('.indicating.progress.demo')
       .progress({
         label   : true,
         total   : 10,
@@ -57,7 +57,7 @@ $(document)
         }
       })
     ;
-    $('.file.progress')
+    $('.file.progress.demo')
       .progress({
         label: false,
         text: {
