--- a/server/partials/examples/accordion.html
+++ b/server/partials/examples/accordion.html
@@ -73,6 +73,34 @@
   </div>
 </div>
 
+<div class="ui divider"></div>
+
+<div class="ui accordion">
+  <div class="active ui header title">
+    <i class="dropdown icon"></i>
+    FAQ Question 1?
+  </div>
+  <div class="active content">
+    <img class="ui wireframe image" src="/images/wireframe/paragraph.png">
+  </div>
+  <div class="ui header title">
+    <i class="dropdown icon"></i>
+    FAQ Question 2?
+  </div>
+  <div class="content">
+    <img class="ui wireframe image" src="/images/wireframe/paragraph.png">
+  </div>
+  <div class="ui header title">
+    <i class="dropdown icon"></i>
+    FAQ Question 3?
+  </div>
+  <div class="content">
+    <img class="ui wireframe image" src="/images/wireframe/paragraph.png">
+  </div>
+</div>
+
+<div class="ui divider"></div>
+
 <div class="ui styled accordion">
   <div class="active title">
     <i class="dropdown icon"></i>
