Add more examples

--- a/server/partials/examples/popup.html
+++ b/server/partials/examples/popup.html
@@ -1,4 +1,4 @@
-<div class="rating demos">
+<div class="popup demos">
   <img src="/images/avatar/small/elliot.jpg" data-title="Elliot Fu" data-content="Elliot has been a member since July 2012" class="ui avatar image">
   <img src="/images/avatar/small/stevie.jpg" data-title="Stevie Feliciano" data-content="Stevie has been a member since August 2013" class="ui avatar image">
   <img src="/images/avatar/small/matt.jpg" data-title="Matt" data-content="Matt has been a member since July 2014" class="ui avatar image">
@@ -22,13 +22,12 @@
   <div class="ui small popup">
     Small pop-up
   </div>
-  <div class="ui button">Medium</div>
+  <div class="ui button">Large</div>
   <div class="ui large popup">
     Large pop-up
   </div>
-  <div class="ui button">Large</div>
-  <div class="ui inverted popup">
-    Inverted pop-up
+  <div class="ui button" data-variation="inverted" data-content="Inverted pop-up">
+    Inverted
   </div>
   <div class="ui menu">
     <a class="active item">
