--- a/server/partials/examples/statistic.html
+++ b/server/partials/examples/statistic.html
@@ -6,7 +6,9 @@
     4:05
   </div>
 </div>
-<div class="ui hidden divider"></div>
+
+<div class="ui divider"></div>
+
 <div class="ui statistic">
   <div class="value">
     22
@@ -15,7 +17,9 @@
     Bottom Label
   </div>
 </div>
-<div class="ui hidden divider"></div>
+
+<div class="ui divider"></div>
+
 <div class="ui statistic">
   <div class="text value">
     Eighty<br>
@@ -34,6 +38,8 @@
   </div>
 </div>
 
+<div class="ui divider"></div>
+
 <div class="ui horizontal statistics">
   <div class="statistic">
     <div class="value">
@@ -44,10 +50,10 @@
       Horizonal Label
     </div>
   </div>
-  <div class="teal statistic">
+  <div class="statistic">
     <div class="value">
       <i class="ticket icon"></i>
-      5
+      51
     </div>
     <div class="label">
       Horizonal Label
