--- a/server/files/stylesheets/shape.css
+++ b/server/files/stylesheets/shape.css
@@ -48,27 +48,9 @@
 }
 
 
-#example .demo.shape {
-
-}
-
 #example .demo.shape .side {
-  
   width: 250px;
   height: 250px;
-
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-
-  background-color: #E6E6E6;
-
-  color: #FFFFFF;
-
-  -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
 }
 
 #example .demo.shape .side img {
@@ -78,14 +60,14 @@
   max-height: 100%;
 }
 
-#example .demo.shape .heroku.side {
-  background-color: #695EE7;
+#example .demo.shape .first.side {
+  background-color: #EEE0D8;
 }
-#example .demo.shape .jira.side {
-  background-color: #98B5E9;
+#example .demo.shape .second.side {
+  background-color: #EEE6D8;
 }
-#example .demo.shape .quirky.side {
-  background-color: #67336F;
+#example .demo.shape .third.side {
+  background-color: #D8EED8;
 }
 
 #example .demo.shape .side b {
@@ -98,22 +80,20 @@
   text-align: center;
 }
 
-#example .demo.rectangle.shape .side {
-  width: 450px;
-  height: 150px;
+#example .demo.auto.shape .side {
+  width: auto;
+  height: auto;
 }
-#example .irregular.shape .heroku.side {
-  background-color: #695EE7;
-  width: 100px;
+
+#example .irregular.shape .first.side {
+  width: 200px;
+  height: 200px;
+}
+#example .irregular.shape .second.side {
+  width: 300px;
   height: 300px;
 }
-#example .irregular.shape .jira.side {
-  background-color: #98B5E9;
-  width: 100px;
-  height: 100px;
-}
-#example .irregular.shape .quirky.side {
-  background-color: #67336F;
+#example .irregular.shape .third.side {
   width: 500px;
-  height: 100px;
+  height: 300px;
 }
