--- a/server/partials/examples/rating.html
+++ b/server/partials/examples/rating.html
@@ -1,40 +1,125 @@
 <div class="rating demos">
-  <div class="ui very relaxed items">
+  <div class="ui relaxed divided items">
     <div class="item">
-      <img class="ui avatar image" src="/images/wireframe/square-image.png">
       <div class="content">
+        <div class="ui large star rating" data-rating="2" data-max-rating="4"></div>
         <div class="header">
-            Choice #1
+          <img src="/images/wireframe/square-image.png" class="ui avatar image">
+          Choice #1
         </div>
-      <div class="ui star rating" data-rating="2" data-max-rating="4"></div>
       </div>
     </div>
     <div class="item">
-      <img class="ui avatar image" src="/images/wireframe/square-image.png">
       <div class="content">
+        <div class="ui large star rating" data-rating="3" data-max-rating="4"></div>
         <div class="header">
-            Choice #2
+          <img src="/images/wireframe/square-image.png" class="ui avatar image">
+          Choice #2
         </div>
-      <div class="ui star rating" data-rating="3" data-max-rating="4"></div>
       </div>
     </div>
     <div class="item">
-      <img class="ui avatar image" src="/images/wireframe/square-image.png">
       <div class="content">
+        <div class="ui large star rating" data-rating="4" data-max-rating="4"></div>
         <div class="header">
-            Choice #3
+          <img src="/images/wireframe/square-image.png" class="ui avatar image">
+          Choice #3
         </div>
-      <div class="ui star rating" data-rating="3" data-max-rating="4"></div>
       </div>
+    </div>
+  </div>
+
+  <div class="ui divider"></div>
+
+  <div class="ui relaxed divided items">
+    <div class="item">
+      <div class="ui tiny image">
+        <img src="/images/wireframe/image.png">
+      </div>
+      <div class="content">
+        <a class="header">Content Header</a>
+        <div class="description">
+          A description which may flow for several lines and give context to the content.
+        </div>
+        <div class="extra">
+          Like <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="ui tiny image">
+        <img src="/images/wireframe/image.png">
+      </div>
+      <div class="content">
+        <a class="header">Content Header</a>
+        <div class="description">
+          A description which may flow for several lines and give context to the content.
+        </div>
+        <div class="extra">
+          Like <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="ui tiny image">
+        <img src="/images/wireframe/image.png">
+      </div>
+      <div class="content">
+        <a class="header">Content Header</a>
+        <div class="description">
+          A description which may flow for several lines and give context to the content.
+        </div>
+        <div class="extra">
+          Like <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="ui hidden divider"></div>
+
+  <div class="ui horizontal divided relaxed list">
+    <div class="item">
+      <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
+    </div>
+    <div class="item">
+      <div class="ui star rating" data-rating="0" data-max-rating="1"></div>
+    </div>
+    <div class="item">
+      <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
+    </div>
+    <div class="item">
+      <div class="ui star rating" data-rating="0" data-max-rating="1"></div>
+    </div>
+    <div class="item">
+      <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
+    </div>
+    <div class="item">
+      <div class="ui star rating" data-rating="0" data-max-rating="1"></div>
+    </div>
+    <div class="item">
+      <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
+    </div>
+    <div class="item">
+      <div class="ui star rating" data-rating="0" data-max-rating="1"></div>
+    </div>
+    <div class="item">
+      <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
     </div>
   </div>
 </div>
 
+
 <script type="text/javascript">
 $(document)
   .ready(function() {
-    $('.rating.demos .rating')
+    $('.rating.demos .items .rating')
       .rating()
+    ;
+    $('.rating.demos .list .rating')
+      .rating({
+        clearable: true
+      })
     ;
   })
 ;
