--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -515,6 +515,9 @@ body#example.hide {
   color: rgba(0, 0, 0, 0.8);
 }
 
+#example .ui.ad {
+  max-width: 100%;
+}
 
 /*----------------
    Overview Mode
