--- a/server/partials/examples/rating.html
+++ b/server/partials/examples/rating.html
@@ -42,7 +42,7 @@
           A description which may flow for several lines and give context to the content.
         </div>
         <div class="extra">
-          Like <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
+          11 <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
           A description which may flow for several lines and give context to the content.
         </div>
         <div class="extra">
-          Like <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
+          42 <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
         </div>
       </div>
     </div>
@@ -70,7 +70,7 @@
           A description which may flow for several lines and give context to the content.
         </div>
         <div class="extra">
-          Like <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
+          16 <div class="ui heart rating" data-rating="0" data-max-rating="1"></div>
         </div>
       </div>
     </div>
@@ -113,10 +113,10 @@
 <script type="text/javascript">
 $(document)
   .ready(function() {
-    $('.rating.demos .items .rating')
+    $('.rating.demos .items .ui.rating')
       .rating()
     ;
-    $('.rating.demos .list .rating')
+    $('.rating.demos .list .ui.rating')
       .rating({
         clearable: true
       })
