--- a/server/partials/examples/transition.html
+++ b/server/partials/examples/transition.html
@@ -29,6 +29,10 @@
 .transition.demo .button {
   margin-bottom: 0.5em;
 }
+/* Dont hide on hide */
+.transition.demo .ui.hidden.image {
+  display: inline-block !important;
+}
 </style>
 <script type="text/javascript">
 $(document)
