Update donate text

--- a/server/partials/footer.html
+++ b/server/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="ui stackable inverted divided relaxed grid">
       <div class="eight wide column">
-        <h3 class="ui inverted header">Help Keep Semantic UI Alive</h3>
+        <h3 class="ui inverted header">Help Make Semantic UI Better</h3>
         <p>Maintaining an open source UI library is no small task. Support for the continued development of Semantic UI comes directly from the community.</p>
         <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
           <input type="hidden" name="cmd" value="_s-xclick">
