--- a/server/files/stylesheets/home.css
+++ b/server/files/stylesheets/home.css
@@ -924,6 +924,9 @@
   }
 }
 @media only screen and (min-width : 600px) {
+  #example .theming .source.button {
+    display: none;
+  }
   #example.index .main.menu {
     display: none;
   }
