Update language partials, docs for 1.1.0

--- a/server/partials/footer.html
+++ b/server/partials/footer.html
@@ -13,7 +13,7 @@
       <div class="four wide column">
         <h5 class="ui teal inverted header">Contribute</h5>
         <div class="ui inverted link list">
-          <a class="item" href="mailto:jack@semantic-ui.com?subject=Help Translating">Translate</a>
+          <a class="item" href="https://www.transifex.com/organization/semantic-org/" target="_blank">Translation Hub</a>
           <a class="item" href="https://github.com/Semantic-Org/Semantic-UI" target="_blank">Issue Tracker</a>
           <a class="item" href="/cla.html" target="_blank">CLA</a>
           <a class="disabled item">Create Themes</a>
@@ -22,7 +22,7 @@
       <div class="four wide column">
         <h5 class="ui teal inverted header">Semantic Network</h5>
         <div class="ui inverted link list">
-          <a class="item" href="https://www.transifex.com/organization/semantic-org/" target="_blank">Translation Hub</a>
+          <a class="item" href="http://legacy.semantic-ui.com">Legacy Docs</a>
           <a class="item" href="http://www.learnsemantic.com">Learn Semantic</a>
           <a class="disabled item">Semantic Themes</a>
           <a class="disabled item">Semantic Layouts</a>
