--- a/server/partials/language-modal.html
+++ b/server/partials/language-modal.html
@@ -17,7 +17,7 @@
   </div>
   <div class="actions">
     <div class="ui inverted cancel button">No Thanks</div>
-    <a href="mailto:jack@semantic-ui.com?subject=Localization%20Help" target="_blank" class="ui inverted approve teal button">
+    <a href="https://github.com/Semantic-Org/Semantic-UI/wiki/Translating-Semantic-UI-Docs" target="_blank" class="ui inverted approve teal button">
       <i class="mail icon"></i>
       Help Translate
     </a>
