Update popup/sidebar doc notes. Fix language typo

--- a/server/partials/languages.html
+++ b/server/partials/languages.html
@@ -8,7 +8,7 @@
   <div class="item" data-percent="17"  data-value="da"     data-english="Danish">dansk</div>
   <div class="item" data-percent="17"  data-value="de"     data-english="German">Deutsch</div>
   <div class="item" data-percent="16"  data-value="id"     data-english="Indonesian">Indonesian</div>
-  <div class="item" data-percent="9"   data-value="zh_TW"  data-english="Chinese (Taiwan)">简体中文 (臺灣)</div>
+  <div class="item" data-percent="9"   data-value="zh_TW"  data-english="Chinese (Taiwan)">中文 (臺灣)</div>
   <div class="item" data-percent="14"  data-value="it"     data-english="Italian">Italiano</div>
   <div class="item" data-percent="12"  data-value="lt"     data-english="Lithuanian">Lietuvių</div>
   <div class="item" data-percent="11"  data-value="tr"     data-english="Turkish">Türkçe</div>
